fix: explicitly set color and background color of page night mode extensions may make things unreadable

--- a/main/src/global.css
+++ b/main/src/global.css
@@ -73,6 +73,8 @@ html {
   font-family: "Helveutica Neue", Helvetica, Arial, var(--japanese-font,),
     "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", "メイリオ", Meiryo,
     YuGothic, "Noto Sans CJK JP", sans-serif;
+  color: var(--text);
+  background-color: var(--background);
 }
 
 .Japanese {
